--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@ html {
   height: 100%;
 }
 
-main {
+main section {
   text-align: center;
   display: grid;
   grid-template-rows: 2fr 1fr 1.5fr 1.5fr;
