--- a/css/presentation.css
+++ b/css/presentation.css
@@ -13,8 +13,6 @@ main {
 main article {
   display: flex;
   justify-content: space-between;
-  max-width: 1060px;
-  margin: auto;
 }
 
 main article img {
@@ -31,8 +29,7 @@ main p {
 main ul {
   display: flex;
   justify-content: space-between;
-  max-width: 1060px;
-  margin: 6rem auto;
+  margin: 6rem auto 0;
 }
 
 main ul li {
