--- a/css/style.css
+++ b/css/style.css
@@ -81,8 +81,38 @@ h2 {
 
 /* ------------------- MAIN -----------------------------*/
 main {
-  background-image: linear-gradient(45deg, #225032d2, #1b3d47da),
+  background-image: linear-gradient(45deg, #00000000, #00000000),
     url(../img/fond.jpg);
+}
+
+main section {
+  max-width: 1060px;
+  margin: auto;
+  padding: 2rem;
+  border-radius: 2rem;
+  background-color: rgba(0, 0, 0, 0.521);
+}
+
+.glass {
+  box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.8);
+  position: relative;
+  z-index: 1;
+  background: inherit;
+  overflow: hidden;
+}
+
+.glass::before {
+  content: "";
+  position: absolute;
+  background: inherit;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  /* box-shadow: inset 0 0 10000px rgb(255, 0, 0); */
+  filter: blur(10px);
+  margin: -20px;
 }
 
 /* ------------------- FOOTER -----------------------------*/
@@ -111,6 +141,8 @@ footer ul li img {
 -----------------------------------------------------------*/
 .btn {
   padding: 0.8rem;
+  width: 11rem;
+  height: 6rem;
   border-radius: 1rem;
   background-color: white;
   color: black;
@@ -144,18 +176,19 @@ footer ul li img {
 
   .nav-menu {
     position: fixed;
-    top: 4rem;
+    top: -100%;
     right: -100%;
     flex-direction: column;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 1);
     border-bottom-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
     width: 80%;
     transition: 0.3s;
     text-align: center;
   }
 
   .nav-menu li {
-    font-size: 1.8rem;
+    font-size: 2rem;
   }
 
   .nav-menu li:nth-child(1) {
@@ -163,7 +196,8 @@ footer ul li img {
   }
 
   .nav-menu.active {
-    right: 0;
+    right: 10%;
+    top: 4.5rem;
   }
 
   .hamburger {
