--- a/css/index.css
+++ b/css/index.css
@@ -7,24 +7,28 @@ html {
 }
 
 main section {
+  height: 70vh;
+  margin: 0 auto;
   text-align: center;
   display: grid;
-  grid-template-rows: 2fr 1fr 1.5fr 1.5fr;
+  align-items: flex-end;
+  grid-template-rows: 50% 25% 20% auto;
+  line-height: 1;
 }
 
 main h1 {
-  grid-row: 2 / 3;
+  grid-row: 1 / 2;
   margin: 0;
 }
 
 main h2 {
-  grid-row: 3/4;
+  grid-row: 2 / 3;
   margin: 0;
 }
 
 main a {
-  grid-row: 4 / 5;
-  margin: 0 auto auto;
+  grid-row: 3 / 4;
+  margin: auto auto 0 auto;
 }
 
 footer {
