--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,12 @@ html {
 body {
   font-family: "Assistant", sans-serif;
   color: white;
+  height: 100%;
 }
 
 main {
   padding: 4rem;
+  min-height: calc(100% - 7.7rem);
 }
 
 h1,
@@ -85,8 +87,11 @@ main a {
 
 /* ------------------- MAIN -----------------------------*/
 main {
-  background-image: linear-gradient(45deg, #00000000, #00000000),
+  background-image: linear-gradient(45deg, #a8ddbe00, #a6ced100),
     url(../img/fond.jpg);
+  background-repeat: no-repeat;
+  /* background-size: cover; */
+  /* background-position: bottom; */
 }
 
 main section {
@@ -94,7 +99,7 @@ main section {
   margin: auto;
   padding: 2rem;
   border-radius: 2rem;
-  background: rgba(0, 0, 0, 0.521);
+  background: rgba(0, 0, 0, 0.685);
 }
 
 .glass {
@@ -103,7 +108,7 @@ main section {
   z-index: 1;
   background: inherit;
   overflow: hidden;
-  background: rgba(0, 0, 0, 0.521);
+  background: rgba(0, 0, 0, 0.616);
 }
 
 .glass::before {
@@ -125,7 +130,7 @@ footer {
   background-color: black;
   display: flex;
   justify-content: center;
-  padding: 10px;
+  padding: 0.7rem;
 }
 
 footer ul {
@@ -135,27 +140,37 @@ footer ul {
 
 footer ul li {
   margin-left: 30px;
+  line-height: 1rem;
+  font-size: 1rem;
 }
 
 footer ul li img {
-  height: 35px;
+  height: 1.5rem;
 }
 
 /* ----------------------------------------------------------
                         CLASS
 -----------------------------------------------------------*/
-.btn {
+.btn,
+.btnSelected {
   padding: 0.8rem;
   width: 11rem;
   height: 6rem;
   border-radius: 1rem;
-  background-color: white;
   color: black;
   font-size: 1.3rem;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 5rem;
+}
+
+.btn {
+  background-color: white;
+}
+
+.btnSelected {
+  background-color: #555;
 }
 
 .btn:hover {
@@ -184,6 +199,7 @@ footer ul li img {
   }
 
   .nav-menu {
+    z-index: 2;
     position: fixed;
     top: -100%;
     right: -100%;
