--- a/css/index.css
+++ b/css/index.css
@@ -2,34 +2,15 @@
                     CSS specific page
 ------------------------------------------------------------- */
 
-html {
-  height: 100%;
-}
 
 main section {
   height: 70vh;
   margin: 0 auto;
   text-align: center;
-  display: grid;
-  align-items: flex-end;
-  grid-template-rows: 50% 25% 20% auto;
-  line-height: 1;
+
+  /* line-height: 1; */
 }
 
-main h1 {
-  grid-row: 1 / 2;
-  margin: 0;
-}
-
-main h2 {
-  grid-row: 2 / 3;
-  margin: 0;
-}
-
-main a {
-  grid-row: 3 / 4;
-  margin: auto auto 0 auto;
-}
 
 footer {
   grid-row: 3 / 4;
