--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,10 @@ html body nav {
           align-items: center;
   padding: 1rem;
   height: 4rem;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
 }
 
 html body nav img {
@@ -74,7 +78,7 @@ html body main #home {
   background-position: 50% 70%;
   background-repeat: no-repeat;
   background-size: cover;
-  height: calc(100vh - 4rem);
+  height: 100vh;
   width: 100%;
   display: -ms-grid;
   display: grid;
