--- a/css/style.scss
+++ b/css/style.scss
@@ -18,6 +18,11 @@ html {
       align-items: center;
       padding: 1rem;
       height: 4rem;
+      position: fixed;
+      top: 0;
+      right: 0;
+      left: 0;
+      // z-index: 998;
 
       img {
         height: 2rem;
@@ -68,7 +73,7 @@ html {
         background-position: 50% 70%;
         background-repeat: no-repeat;
         background-size: cover;
-        height: calc(100vh - 4rem);;
+        height: 100vh;
         width: 100%;
 
         display: grid;
