--- a/css/style.scss
+++ b/css/style.scss
@@ -140,6 +140,102 @@ html {
         }
       }
       
+      /* ------------------- SKILLS ---------------------------*/
+      #skills{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: rgb(50,50,50);
+        padding: 2rem 2rem;
+        scroll-margin-top: 4rem;
+
+        div{
+          width: 100%;
+          max-width: 1060px;
+          margin: auto;
+  
+          h3 {
+            margin: 0;
+            text-align: center;
+          }
+  
+          h4 {
+            font-size: 1.5rem;
+            text-decoration: underline;
+            margin: 0;
+            text-align: center;
+          }
+  
+          /* ----------- SELECTION ----------------- */
+          #selection {
+            display: flex;
+            justify-content: space-between;
+  
+            li {
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              width: 22%;
+              cursor: pointer;
+  
+              img {
+                height: 2rem;
+              }
+  
+              p {
+                margin: 0.5rem;
+              }
+            }
+  
+            li:hover {
+              background-color: #000;
+              color: #fff;
+            }
+  
+          }
+          
+          article {
+            border-radius: 1rem;
+            margin: 0;
+            display: none;
+  
+            ul {
+              display: flex;
+              justify-content: space-around;
+              flex-wrap: wrap;
+              margin-top: 1rem;
+  
+              li {
+                padding: 1rem;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                max-width: 6rem;
+  
+                img {
+                  height: 5rem;
+                }
+  
+                p {
+                  font-size: 1rem;
+                  text-align: center;
+                  margin: 0rem;
+                }
+              }
+            }
+          }
+
+          #transverse {
+            display: block;
+          }
+  
+          .lign {
+            display: flex;
+          }
+        }
+        
+      }
     }
   }
 
@@ -243,8 +339,8 @@ footer {
 .btn,
 .btnSelected {
   padding: 0.8rem;
-  min-width: 11rem;
-  min-height: 6rem;
+  min-width: 10rem;
+  min-height: 5rem;
   color: black;
   font-size: 1.3rem;
   display: flex;
@@ -361,6 +457,22 @@ footer {
               width: 100%;
               margin-bottom: 2rem;
             }
+          }
+        }
+
+        /* ------------------- SKILLS ---------------------------*/
+        #skills{
+          padding: 2rem;
+        }
+
+        #selection {
+          flex-direction: column;
+          align-items: center;
+
+          li {
+            width: 100%;
+            margin-bottom: 0.3rem;
+            justify-content: center;
           }
         }
       }
