--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,41 @@
 /* --------------------------------------------------------
                         GENERAL
 ----------------------------------------------------------*/
+h1,
+h2 {
+  font-family: "Source Code Pro", monospace;
+  text-align: center;
+  text-transform: uppercase;
+}
 
+h1 {
+  font-size: 7rem;
+}
+
+h2 {
+  font-size: 4rem;
+  margin-top: 0;
+}
+
+main a {
+  margin: 0 auto auto;
+}
+
+section {
+  scroll-margin-top: 4rem;
+  padding: 2rem 2rem;
+
+  div{
+    max-width: 1060px;
+    margin: auto;
+  }
+}
+
+
+
+/* ----------------------------------------------------------
+                        SECTIONS
+-----------------------------------------------------------*/
 html {
   font-size: 100%;
   height: 100%;
@@ -99,13 +133,9 @@ html {
       /* ------------------- PRESENTATION ---------------------*/
       #presentation{
         background-color: rgb(70, 70, 70);
-        padding: 2rem 2rem;
         color: white;
-        scroll-margin-top: 4rem;
         
         div{
-          max-width: 1060px;
-          margin: auto;
 
           article {
             //display: flex;
@@ -146,13 +176,9 @@ html {
         flex-direction: column;
         align-items: center;
         background-color: rgb(50,50,50);
-        padding: 2rem 2rem;
-        scroll-margin-top: 4rem;
 
         div{
           width: 100%;
-          max-width: 1060px;
-          margin: auto;
   
           h3 {
             margin: 0;
@@ -236,102 +262,61 @@ html {
         }
         
       }
+
+      /* ------------------- VALUES ---------------------------*/
+      #values{
+        background-color: rgb(70, 70, 70);
+
+        div{
+
+          ul {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+  
+            li {
+              background-color: #353535;
+              border-radius: 1rem;
+              padding: 1rem;
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              text-align: center;
+              margin-bottom: 10%;
+              width: 45%;
+              font-size: 1.2rem;
+            }
+          }
+        }
+      }
     }
-  }
 
-}
-
-
-/* main {
-  padding: 4rem;
-  min-height: calc(100% - 7.7rem);
-} */
-
-h1,
-h2 {
-  font-family: "Source Code Pro", monospace;
-  text-align: center;
-  text-transform: uppercase;
-}
-
-h1 {
-  font-size: 7rem;
-}
-
-h2 {
-  font-size: 4rem;
-  margin-top: 0;
-}
-
-main a {
-  margin: 0 auto auto;
-}
-
-/* ----------------------------------------------------------
-                        SECTIONS
------------------------------------------------------------*/
-
-
-
-/* ------------------- MAIN -----------------------------*/
-
-// main {
-//   background-position: bottom;
-// }
-
-/* main section {
-  max-width: 1060px;
-  margin: auto;
-  padding: 2rem;
-  border-radius: 2rem;
-} */
-
-.glass {
-  box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.8);
-  position: relative;
-  z-index: 1;
-  background: inherit;
-  overflow: hidden;
-  background: rgba(51, 60, 61, 0.726);
-}
-
-.glass::before {
-  content: "";
-  position: absolute;
-  background: inherit;
-  z-index: -1;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  /* box-shadow: inset 0 0 10000px rgb(255, 0, 0); */
-  filter: blur(10px);
-  margin: -20px;
-}
-
-
-/* ------------------- FOOTER ---------------------------*/
-footer {
-  background-color: black;
-  display: flex;
-  justify-content: center;
-  padding: 0.7rem;
-
-  ul {
-    display: flex;
-    margin: 0;
-
-    li {
-      margin-left: 30px;
-      line-height: 1rem;
-      font-size: 1rem;
-
-      img {
-        height: 1.5rem;
+    /* ------------------- FOOTER ---------------------------*/
+    footer {
+      background-color: black;
+      display: flex;
+      justify-content: center;
+      padding: 0.7rem;
+    
+      ul {
+        display: flex;
+        margin: 0;
+    
+        li {
+          margin-left: 30px;
+          line-height: 1rem;
+          font-size: 1rem;
+    
+          img {
+            height: 1.5rem;
+          }
+        }
       }
     }
   }
 }
+
+
 
 /* ----------------------------------------------------------
                         CLASS
@@ -463,26 +448,34 @@ footer {
         /* ------------------- SKILLS ---------------------------*/
         #skills{
           padding: 2rem;
+
+          #selection {
+            flex-direction: column;
+            align-items: center;
+  
+            li {
+              width: 100%;
+              margin-bottom: 0.3rem;
+              justify-content: center;
+            }
+          }
         }
 
-        #selection {
-          flex-direction: column;
-          align-items: center;
+        /* ------------------- VALUES ---------------------------*/
+        #values{
+          ul{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
 
-          li {
-            width: 100%;
-            margin-bottom: 0.3rem;
-            justify-content: center;
+            li {
+              width: 100%;
+            }
           }
         }
       }
     }
   }
-
-  // main {
-  //   padding: 2rem;
-  // }
-
 
   .btn {
     padding: 0.7rem;
