--- a/css/style.scss
+++ b/css/style.scss
@@ -276,7 +276,6 @@ html {
   
             li {
               background-color: #353535;
-              border-radius: 1rem;
               padding: 1rem;
               display: flex;
               flex-direction: column;
@@ -296,19 +295,22 @@ html {
       background-color: black;
       display: flex;
       justify-content: center;
-      padding: 0.7rem;
+      align-items: center;
+      padding: 1rem;
+      height: 4rem;
     
       ul {
         display: flex;
-        margin: 0;
+        justify-content: space-between;
+        width: 10rem;
     
         li {
-          margin-left: 30px;
-          line-height: 1rem;
-          font-size: 1rem;
     
+          font-size: 100%;
+          line-height: 100%;
+
           img {
-            height: 1.5rem;
+            height: 2rem;
           }
         }
       }
@@ -321,30 +323,26 @@ html {
 /* ----------------------------------------------------------
                         CLASS
 -----------------------------------------------------------*/
-.btn,
-.btnSelected {
+.btn{
   padding: 0.8rem;
   min-width: 10rem;
   min-height: 5rem;
-  color: black;
   font-size: 1.3rem;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
-}
-
-.btn {
   background-color: white;
-}
-
-.btnSelected {
-  background-color: #555;
+  color: black;
 }
 
 .btn:hover {
   background-color: black;
   color: white;
+}
+
+.btnSelected {
+  background-color: #555;
 }
 
 .btnImportant {
