--- a/css/style.scss
+++ b/css/style.scss
@@ -363,13 +363,13 @@ html {
         ul{
           z-index: 2;
           position: fixed;
-          top: -100%;
+          top: 4rem;
           right: -100%;
+          // right: -100%;
           flex-direction: column;
-          background-color: rgba(0, 0, 0, 1);
-          border-bottom-left-radius: 1rem;
-          border-bottom-right-radius: 1rem;
-          width: 80%;
+          background-color: rgba(0, 0, 0, 0.85);
+          width: 100%;
+          height: 100%;
           transition: 0.3s;
           text-align: center;
 
@@ -389,8 +389,8 @@ html {
         }
 
         .active {
-          right: 10%;
-          top: 4.5rem;
+          right: 0;
+          // top: 4rem;
 
           .bar:nth-child(2) {
             opacity: 0;
