--- a/css/style.scss
+++ b/css/style.scss
@@ -46,6 +46,7 @@ $blue: #32b6ce;
 html {
   font-size: 100%;
   height: 100%;
+  scroll-behavior: smooth;
   
   body {
     font-family: "Assistant", sans-serif;
