refactor: delete competence.js and clean up code in script.js

--- a/css/style.css
+++ b/css/style.css
@@ -311,7 +311,7 @@ html body main #skills div article ul li p {
   margin: 0rem;
 }
 
-html body main #skills div #transverse {
+html body main #skills div #transverse_article {
   display: block;
 }
 
