--- a/css/style.scss
+++ b/css/style.scss
@@ -265,7 +265,7 @@ html {
             }
           }
 
-          #transverse {
+          #transverse_article {
             display: block;
           }
   
