--- a/css/style.scss
+++ b/css/style.scss
@@ -22,7 +22,7 @@ main a {
 }
 
 section {
-  scroll-margin-top: 4rem;
+  scroll-margin-top: $nav-height;
   padding: 2rem 2rem;
 
   div{
@@ -35,6 +35,7 @@ section {
                         VARIABLES
 ----------------------------------------------------------*/
 $transition: 0.5s;
+$nav-height: 4rem;
 
 /* ------------------- COLORS -----------------------------*/
 $blue: #32b6ce;
@@ -59,7 +60,7 @@ html {
       display: flex;
       align-items: center;
       padding: 1rem;
-      height: 4rem;
+      height: $nav-height;
       position: fixed;
       top: 0;
       right: 0;
