--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,16 @@ html body main #presentation {
   color: white;
 }
 
+html body main #presentation div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
 html body main #presentation div article {
   text-align: justify;
   margin: 0;
@@ -176,6 +186,10 @@ html body main #presentation div article img {
   margin-right: 1rem;
 }
 
+html body main #presentation div article p {
+  margin-top: 0;
+}
+
 html body main #presentation div ul {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -183,7 +197,8 @@ html body main #presentation div ul {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin: 6rem auto 0;
+  margin: 4rem auto 0;
+  width: 100%;
 }
 
 html body main #presentation div ul li {
@@ -493,7 +508,7 @@ html body footer ul li img {
     -ms-grid-rows: 45% 25% 20% auto;
         grid-template-rows: 45% 25% 20% auto;
   }
-  html body main #presentation article {
+  html body main #presentation div article {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -505,10 +520,13 @@ html body footer ul li img {
         -ms-flex-align: center;
             align-items: center;
   }
-  html body main #presentation article img {
-    margin: 0 0 3rem 0;
+  html body main #presentation div article img {
+    margin: 0 0 1rem 0;
   }
-  html body main #presentation ul li {
+  html body main #presentation div ul {
+    margin-top: 1rem;
+  }
+  html body main #presentation div ul li {
     width: 33%;
   }
   html body main #skills {
