--- a/css/style.scss
+++ b/css/style.scss
@@ -152,19 +152,22 @@ html {
         
         div{
 
+          display: flex;
+          flex-direction: column;
+
           article {
-            //display: flex;
-            //justify-content: space-between;
 
             img {
               float: left;
               width: 15rem;
               margin-right: 1rem;
-              // height: auto;
+            }
+
+            p{
+              margin-top: 0;
             }
   
             text-align: justify;
-            //width: calc(100% - 20rem);
             margin: 0;
             font-size: 1.3rem;
 
@@ -173,7 +176,8 @@ html {
           ul {
             display: flex;
             justify-content: space-between;
-            margin: 6rem auto 0;
+            margin: 4rem auto 0;
+            width: 100%;
   
             li {
               display: flex;
@@ -433,21 +437,27 @@ html {
 
         /* ------------------- PRESENTATION ---------------------*/
         #presentation{
-          article {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-
-            img {
-              margin: 0 0 3rem 0;
+          
+          div{
+            
+            article {
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+  
+              img {
+                margin: 0 0 1rem 0;
+              }
+  
             }
-
-          }
-
-          ul {
-
-            li {
-              width: 33%;
+  
+            ul {
+  
+              margin-top: 1rem;
+  
+              li {
+                width: 33%;
+              }
             }
           }
         }
